--- a/formulario-concluido.html
+++ b/formulario-concluido.html
@@ -23,7 +23,7 @@
         </div>
         <section class="registry-card cartao">
             <span class="registry-card__icon-complete"></span>
-            <h1 class="registry-card__title card__title">¡Registro completado!</h1>
+            <h1 class="registry-card__title card__title">Formulario Enviado</h1>
             <a href="./index.html" class="button">Acceder</a>
         </section>
     </main>
