--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <!-- Formulario -->
                 <div class="col">
                     <div class="input-container">
-                        <form>
+                        <form action="./formulario-concluido.html">
                             <label for="name">Name:</label>
                             <input type="text" id="name" name="name" required>
                             <label for="email">Email:</label>
@@ -295,7 +295,7 @@
                             <label for="mensaje">Mensaje</label>
                             <textarea name="mensaje" id="mensaje" cols="30" rows="10" required></textarea>
                             <a href="./formulario-concluido.html">
-                            <button type="submit" onclick="submitForm()">Submit<i class="fa-solid fa-paper-plane"><span
+                            <button>Submit<i class="fa-solid fa-paper-plane"><span
                                         class="overlay"></span></i></button></a>
                                         
                         </form>
